[gd_scene load_steps=13 format=3 uid="uid://ds70pbbdbtgkc"]

[ext_resource type="Script" path="res://src/game/entities/player/player.gd" id="1_t5npn"]
[ext_resource type="Texture2D" uid="uid://bxvf481uc5x5j" path="res://assets/textures/player/player.png" id="2_oblfc"]
[ext_resource type="Texture2D" uid="uid://lsinxl4gsrnk" path="res://assets/textures/weapons/Gun.png" id="3_4ioo5"]
[ext_resource type="Script" path="res://src/game/entities/player/Weapon.gd" id="3_shbgt"]
[ext_resource type="Script" path="res://src/game/components/spawner_component.gd" id="5_jvrom"]
[ext_resource type="PackedScene" uid="uid://d00a51jft8ga2" path="res://src/game/entities/proyectile/Proyectile.tscn" id="5_vd2y6"]
[ext_resource type="Script" path="res://src/game/components/move_input_component.gd" id="6_d4ko6"]
[ext_resource type="Script" path="res://src/game/components/stats_component.gd" id="8_6fxie"]
[ext_resource type="Script" path="res://src/game/components/hurt_box_component.gd" id="9_kk872"]
[ext_resource type="Script" path="res://src/game/components/hurt_component.gd" id="10_xcugp"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0mxik"]
radius = 9.33333
height = 36.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_erdwi"]
radius = 8.0

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 0
collision_mask = 4
motion_mode = 1
script = ExtResource("1_t5npn")

[node name="StatsComponent" type="Node" parent="."]
script = ExtResource("8_6fxie")
speed = 200.0
health = 10

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_oblfc")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_0mxik")

[node name="Weapon" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_4ioo5")
script = ExtResource("3_shbgt")

[node name="WeaponTip" type="Marker2D" parent="Weapon"]
position = Vector2(6.22222, 0)

[node name="FireDelayTimer" type="Timer" parent="Weapon"]
wait_time = 0.3

[node name="SpawnerComponent" type="Node2D" parent="Weapon"]
position = Vector2(2.66667, 0)
script = ExtResource("5_jvrom")
scene = ExtResource("5_vd2y6")

[node name="HurtboxComponent" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource("9_kk872")

[node name="HurtboxShape" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_erdwi")
debug_color = Color(0.848908, 0.340529, 0.415049, 0.42)

[node name="HurtComponent" type="Node" parent="." node_paths=PackedStringArray("stats_component", "hurtbox_component", "sprite")]
script = ExtResource("10_xcugp")
stats_component = NodePath("../StatsComponent")
hurtbox_component = NodePath("../HurtboxComponent")
sprite = NodePath("../Sprite")

[node name="MoveInputComponent" type="Node" parent="." node_paths=PackedStringArray("actor", "stats")]
script = ExtResource("6_d4ko6")
actor = NodePath("..")
stats = NodePath("../StatsComponent")

[connection signal="timeout" from="Weapon/FireDelayTimer" to="Weapon" method="_on_fire_delay_timer_timeout"]
